# rucat

./: Cargo.toml  README.md  rucat_architecture.drawio  run.sh  test.sh
.github/workflows/: rust.yml
examples/: config.json  run.sh
kubernetes/docker/: build_rucat_server.sh  build_rucat_state_monitor.sh  rucat_server.dockerfile  rucat_state_monitor.dockerfile
kubernetes/helm/rucat/: Chart.yaml  values.yaml
kubernetes/helm/rucat/charts/server/: Chart.yaml  values.yaml
kubernetes/helm/rucat/charts/server/templates/: configmap.yaml  deployment.yaml
kubernetes/helm/rucat/charts/state-monitor/: Chart.yaml  values.yaml
kubernetes/helm/rucat/charts/state-monitor/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
kubernetes/helm/rucat/charts/surrealdb/: Chart.yaml  values.yaml
kubernetes/helm/rucat/charts/surrealdb/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml
kubernetes/helm/rucat/charts/surrealdb/templates/tests/: test-connection.yaml
kubernetes/helm/rucat/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
kubernetes/helm/rucat/templates/tests/: test-connection.yaml
rucat-client/: Cargo.toml
rucat-cluster/: Cargo.toml
rucat-cluster-manager/: Cargo.toml
rucat-cluster-manager/src/: main.rs
rucat-cluster/src/: communication.rs  configs.rs  driver.rs  error.rs  lib.rs  main.rs  task.rs  task_executor.rs  worker.rs
rucat_client/: Cargo.toml
rucat_client/examples/: engine.rs
rucat_client/src/: engine.rs  lib.rs  main.rs  resource_client.rs
rucat_client/tests/: resource_client.rs
rucat_cluster/: Cargo.toml
rucat_cluster/src/: configs.rs  driver.rs  error.rs  lib.rs  main.rs  worker.rs
rucat_cluster_manager/: Cargo.toml
rucat_cluster_manager/src/: main.rs
rucat_common/: Cargo.toml  build.rs
rucat_common/proto/: client.proto  engine.proto
rucat_common/src/: config.rs  database.rs  engine.rs  error.rs  lib.rs
rucat_common/src/database/: mod.rs  surrealdb_client.rs
rucat_common/src/database_client/: mod.rs  surrealdb_client.rs
rucat_common/src/engine/: engine_id.rs  engine_info.rs  engine_state.rs  engine_time.rs  engine_type.rs  mod.rs
rucat_engine/: Cargo.toml
rucat_engine/src/: main.rs
rucat_job/: Cargo.toml
rucat_job/src/: job.rs  lib.rs  stage.rs  task.rs  task_context.rs
rucat_job/src/rdd/: dependency.rs  deterministic_level.rs  map_partition_rdd.rs  mod.rs  partition.rs  rdd.rs  storage_level.rs
rucat_server/: Cargo.toml  README.md  run.sh
rucat_server/src/: authentication.rs  cluster_router.rs  config.rs  data_store.rs  engine_router.rs  error.rs  lib.rs  main.rs
rucat_server/src/authentication/: mod.rs  static_auth_provider.rs
rucat_server/src/engine/: k8s.rs  mod.rs  router.rs  rpc.rs
rucat_server/src/state/: data_base.rs  data_store.rs  mod.rs
rucat_server/tests/: authentication.rs  clusters.rs  engine.rs
rucat_server/tests/common/: mod.rs
rucat_server/tests/configs/: authentication_test_config.json  engine_test_config.json
rucat_state_monitor/: Cargo.toml
rucat_state_monitor/src/: config.rs  lib.rs  main.rs
rucat_state_monitor/src/resource_client/: k8s_client.rs  mod.rs
rucat_state_monitor/src/resource_manager/: k8s_client.rs  mod.rs
