[package]
name = "rucat_client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Client library of Rucat server with engine APIs provided"
repository = "https://github.com/HaoYang670/rucat/tree/main/rucat_client"
readme = "../README.md"

[dependencies]
rucat_common = "0.1.0"
reqwest = { version = "0.12.12", features = ["json"] }

[dev-dependencies]
httpmock = "0.7.0"