[package]
name = "rucat_cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crate for CLI
clap = { version = "4.3.21", features = ["derive"] }

# crate for driver to calling workers 
tarpc = "0.33"

"rucat_job" = {path = "../rucat_job"}


