[package]
name = "rucat_common"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Client library of Rucat server with engine APIs provided"
repository = "https://github.com/HaoYang670/rucat/tree/main/rucat_common"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {"version" = "1.0.95"}
clap = { version = "4.5.27", features = ["derive"] }
clap_derive = "4.5.24"
prost = "0.13.4"
rand = "0.9.0"
serde = {"version" = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
surrealdb = {"version" = "2.1.4", features = ["kv-mem", "native-tls"]}
tokio = {"version" = "1.43.0", features = ["full"]}
tonic = "0.12.3"
time = {version = "0.3.37", features = ["serde-well-known", "parsing", "macros"]}
tracing = {"version" = "0.1.41"}
tracing-subscriber = {"version" = "0.3.19"}

[build-dependencies]
tonic-build = "0.12.3"