[package]
name = "rucat_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rucat_common = {path = "../rucat_common"}
serde_json = "1.0.127"
tonic = "0.12.2"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tracing = {"version" = "0.1.40"}
tracing-subscriber = {"version" = "0.3.18"}