[package]
name = "rucat_job"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# ??? Do we still need these?
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"

# crates for serialize jobs
serde_closure = "0.3.3"
serde_traitobject = "0.2.8"