[package]
name = "rucat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rucat_common = {path = "../rucat_common"}
axum = {"version" = "0.7.7", features = ["macros"]}
axum-extra = {"version" = "0.9.4", features = ["typed-header"]}
bytes = {"version" = "1.8.0"}
http = {"version" = "1.1.0"}
http-body = {"version" = "1.0.1"}
serde = {"version" = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
tower-http = { "version" = "0.6.1", features = ["trace"] }
tokio = {"version" = "1.41.1", features = ["full"]}
tonic = "0.12.3"

# test dependencies

[dev-dependencies]
axum-test = {"version" = "16.3.0"}
headers = {"version" = "0.4.0"}
