[package]
name = "rucat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rucat_common = {path = "../rucat_common"}
axum = {"version" = "0.7.9", features = ["macros"]}
axum-extra = {"version" = "0.9.6", features = ["typed-header"]}
bytes = {"version" = "1.9.0"}
http = {"version" = "1.2.0"}
http-body = {"version" = "1.0.1"}
tower-http = { "version" = "0.6.2", features = ["trace"] }
tonic = "0.12.3"

# test dependencies

[dev-dependencies]
axum-test = {"version" = "16.4.1"}
headers = {"version" = "0.4.0"}
mockall = "0.13.1"
